# yate-g72X-ipp

./: Makefile.in  Makefile.ipp7  README  autogen.sh  build.sh  configure  configure.in  decg723.c  decg729fp.c  encg723.c  encg729fp.c  g723api.h  g723codec.cpp  g723ipp.h  g729codec.cpp  g729fpapi.h  owng723.c  owng723.h  owng729fp.c  owng729fp.h  vadg723.c  vadg723.h  vadg729fp.c  vadg729fp.h  yate-ipp.spec  yate-ipp.spec.in
debian/: README  changelog  control  copyright  files  install  rules
